--- a/themes/docsacode/templates/page.html
+++ b/themes/docsacode/templates/page.html
@@ -8,9 +8,10 @@
       {% set s = get_section(path=parent, include_pages=false) %}
       <li><a href="{{s.permalink}}">{{s.title}}</a>&nbsp;&#8594;&nbsp;</li> 
     {% endfor %}
+    <li><h4>{{ page.title }}</h4></li>
   </ul>
-  <h1>{{ page.title }}</h1> 
 
+  <!--
   <div id="taxonomies">
     {% if page.date %}
       <date>{{ page.date | date(format="%d.%m.%Y") }}</date>
@@ -31,7 +32,7 @@
       {% endfor %}
       </ul>
     {% endif %}
-
+    -->
 
 
   </div>
