--- a/themes/docsacode/templates/index.html
+++ b/themes/docsacode/templates/index.html
@@ -11,75 +11,84 @@
     </head>
 
     <body>
-      <nav>
-        <!--
-        <div id="subnav">
-          <form class="theme-selector">
-            <button type="button" id="theme-light-button" class="theme-button" onclick="enableTheme('light', true)">&#9706;</button>
-            <button type="button" id="theme-dark-button"  class="theme-button enabled" onclick="enableTheme('dark', true)">&#9705;</button>
-          </form>
-          <a href="/search">&#8981;</a>       
-        </div>
+ 
+
+
+        <nav>
+          <!--
+          <div id="subnav">
+            <form class="theme-selector">
+              <button type="button" id="theme-light-button" class="theme-button" onclick="enableTheme('light', true)">&#9706;</button>
+              <button type="button" id="theme-dark-button"  class="theme-button enabled" onclick="enableTheme('dark', true)">&#9705;</button>
+            </form>
+            <a href="/search">&#8981;</a>       
+          </div>
+          -->
+          <div class="logo">
+          <img src="{{ get_url(path="images/logo.png")}}">
+
+          <br />
+          <div id="submenu">
+            <a href="/netzwerk">Netzwerk</a> | <a href="/werkstatt">Werkstatt</a> | <a href="/impressum">Impressum</a> | 
+            <a href="/search">Suche</a>    
+          </div>
+        {% block nav %}
+          <!--
+          <ul id="breadcrumbs">
+            {% for tax in config.taxonomies %}
+              <li>/<a href="/{{tax.name}}/">{{tax.name}}</a>&nbsp;</li> 
+            {% endfor %}
+          </ul>
         -->
-        <div class="logo">
-        <img src="{{ get_url(path="images/logo.png")}}">
+          
+            {{ macro::tree() }}
+        {% endblock nav %}
+        
+        </nav>
+        <div id="placeholder"></div>
 
-        <br />
-        <div id="submenu">
-          <a href="/netzwerk">Netzwerk</a> | <a href="/werkstatt">Werkstatt</a> | <a href="/impressum">Impressum</a> | 
-          <a href="/search">Suche</a>    
-        </div>
-      {% block nav %}
-        <ul id="breadcrumbs">
-          {% for tax in config.taxonomies %}
-            <li>/<a href="/{{tax.name}}/">{{tax.name}}</a>&nbsp;</li> 
-          {% endfor %}
-        </ul>
-         
-          {{ macro::tree() }}
-      {% endblock nav %}
-      
-      </nav>
+        <main>
+        {% block content %}
 
-      <main>
-      {% block content %}
-
-        {% set_global header_count = 0 %}
-        {% for h2 in section.toc %}
-          {% set_global header_count = header_count + 1 %}
-          {% for h3 in h2.children %}
+          {% set_global header_count = 0 %}
+          {% for h2 in section.toc %}
             {% set_global header_count = header_count + 1 %}
-            {% for h4 in h3.children %}
+            {% for h3 in h2.children %}
               {% set_global header_count = header_count + 1 %}
+              {% for h4 in h3.children %}
+                {% set_global header_count = header_count + 1 %}
+              {% endfor %}
             {% endfor %}
           {% endfor %}
-        {% endfor %}
 
-        {% if header_count > 4 %}
-            <ul id="toc">
-              {% for h2 in section.toc %}
-                <li><a href="{{ h2.permalink | safe }}">{{ h2.title }}</a>
-                {% if h2.children %}<ul>        
-                  {% for h3 in h2.children %}
-                  <li><a href="{{ h3.permalink | safe }}">{{ h3.title }}</a></li>
-                {% endfor %}
+          {% if header_count > 4 %}
+              <ul id="toc">
+                {% for h2 in section.toc %}
+                  <li><a href="{{ h2.permalink | safe }}">{{ h2.title }}</a>
+                  {% if h2.children %}<ul>        
+                    {% for h3 in h2.children %}
+                    <li><a href="{{ h3.permalink | safe }}">{{ h3.title }}</a></li>
+                  {% endfor %}
+                </ul>
+          {% endif %}
+                </li>
+          {% endfor %}
               </ul>
-        {% endif %}
-              </li>
-        {% endfor %}
-            </ul>
-            <hr id="sep" />
-        {% endif %}
+              <hr id="sep" />
+          {% endif %}
 
 
-        <article>
-        {{ section.content | safe }}
-        </article>
-      {% endblock content %}
+          <article>
+          {{ section.content | safe }}
+          </article>
+        {% endblock content %}
 
 
-      </main>
+        </main>
 
+ 
+
+ 
       <footer>
         <div>
           <a href="https://creativecommons.org/share-your-work/public-domain/cc0/"><img src="https://licensebuttons.net/p/zero/1.0/88x31.png" alt="CC-0" /></a><br />
@@ -90,19 +99,5 @@
          
       </footer>
 
-
-
-      <script type="text/javascript" src="{{ get_url(path="themes.js") | safe }}"></script>
-
-      <script>
-        function burger() {
-          var x = document.getElementById("bger");
-          if (x.style.display === "block") {
-            x.style.display = "block";
-          } else {
-            x.style.display = "block";
-          }
-        }
-        </script>
     </body>
 </html>
