--- a/themes/docsacode/templates/section.html
+++ b/themes/docsacode/templates/section.html
@@ -8,9 +8,9 @@
             {% set s = get_section(path=parent, include_pages=false) %}
                 <li><a href="{{s.permalink}}">{{s.title}}</a>&nbsp;&#8594;&nbsp; </li>
             {% endfor %}
-            
+        <li><h4>{{ section.title }}</h4></li>
     </ul>
-    <h1>{{ section.title }}</h1>
+   
     {{ macro::tree() }} 
 
     
