--- a/themes/docsacode/templates/search.html
+++ b/themes/docsacode/templates/search.html
@@ -3,9 +3,8 @@
 {% block nav %}
     <ul id="breadcrumbs">
         <li><a href="/">{{ config.title }}</a>&nbsp;&#8594;&nbsp;</li>
-        <li>{{ page.title }}</li>
+        <li><h4>{{ page.title }}</h4></li>
     </ul>
-    <h1>{{page.title}}</h1>
 {% endblock nav %}
 
 {% block content %}
