--- a/themes/docsacode/sass/main.scss
+++ b/themes/docsacode/sass/main.scss
@@ -107,11 +107,16 @@ h1 {
   margin:1rem 0;
 }
 
+html {
+  width: 100%;
+}
 
 body {
-  margin: 3rem 3rem 3rem 3rem;
+  padding: 3rem 3rem 3rem 3rem;
   //margin-right: 5rem;
   
+
+
   height: auto;
   text-rendering: optimizeLegibility;
   font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
