--- a/themes/docsacode/sass/main.scss
+++ b/themes/docsacode/sass/main.scss
@@ -234,14 +234,14 @@ footer {
     position: static;
     float: left;
     width: 100%;
-    min-width: 100%;
+    min-width: 500px;
   }
 
   main {
     margin-right:1rem;
     float: left;
     width: 100%;
-    min-width: 100%;
+    min-width: 500px;
     #content {
       width: 100%;
     }
