--- a/themes/docsacode/templates/index.html
+++ b/themes/docsacode/templates/index.html
@@ -17,8 +17,8 @@
         <nav>
 
           <div class="logo">
-          <img src="{{ get_url(path="images/logo.png")}}">
-
+          <img id="logo-big" src="{{ get_url(path="images/logo.png")}}">
+          <img id="logo-small" src="{{ get_url(path="images/logo-small.png")}}">
           <br />
           <div id="submenu">
             <a href="/infoportal">Über uns</a> | <a href="/infoportal/impressum">Impressum</a> | 
@@ -37,7 +37,6 @@
         {% endblock nav %}
         
         </nav>
-        <div id="placeholder"></div>
 
 
         <main>
