--- a/themes/docsacode/sass/main.scss
+++ b/themes/docsacode/sass/main.scss
@@ -253,14 +253,6 @@ footer {
     margin-left:5rem;
     width: 90%;
     //min-width: 490px;
-
-    #logo-big {
-      display: block;
-    }
-
-    #logo-small {
-      display: none;
-    }
     
   }
 
@@ -283,12 +275,17 @@ footer {
   }
 }
 
-@media only screen and (max-width: 800px) {
-  html body {
+@media only screen and (max-width: 600px) {
+  html {
     margin: 0;
-    padding:0;
+    padding: 1rem;
+    box-sizing: border-box;
+  }
+
+  body {
+    margin: 0;
+    padding: 0;
     font-size: 0.9rem;
-    //width: 100%;
   }
 
 
@@ -296,48 +293,38 @@ footer {
     font-size:1.5rem;
     line-height:1;
     font-weight: 500;
-    margin:1rem 0;
   }
 
   nav {
-    margin:0;
+    margin: 0;
+    padding: 0;
+    width: 100%;
     position: static;
-    float: left;
-    margin-left:1rem;
-    width: 95%;
-    //min-width: 360px;
-
-    #logo-big {
-      display: none;
-    }
-
-    #logo-small {
-      display: block;
-    }
   }
 
   main {
-    padding:0;
-    margin: auto;
-    float: left;
-    //min-width: 490px;
-    width: 95%;
-    margin-left: 1rem;
+    margin: 0;
+    padding: 0;
+    width: 100%;
+    position: static;
+
     #content {
-      width: 95%;
-      margin-right: 1rem;
+      margin: 0;
+      padding: 0;
     }
   }
 
   article {
-    padding:0;
-    width: 100%;
+    margin: 0;
+    padding: 0;
   }
 
   footer {
-    width: 95%;
-    margin-left:1rem;
-    margin-right: 1rem;
+    margin: 0;
+    padding: 0;
+    width: 100%;
+    position: static;
+
     margin-top: 3rem;
     position: static;
   }
@@ -346,6 +333,7 @@ footer {
 @media print {
   body {
     margin: 0;
+
   }
   nav {
     margin-right:0rem;
