--- a/themes/docsacode/sass/main.scss
+++ b/themes/docsacode/sass/main.scss
@@ -147,13 +147,6 @@ nav {
   top: 2rem;
   //padding:4vw;
 
-  #logo-big {
-    display: block;
-  }
-
-  #logo-small {
-    display: none;
-  }
 
   #submenu {
     margin-bottom: 3rem;
@@ -239,37 +232,44 @@ footer {
 
 
 @media only screen and (max-width: 1090px) {
-  html body {
+  html {
     margin: 0;
-    padding:0;
-    width: 100%;
+    padding: 4rem;
+    box-sizing: border-box;
+  }
+
+  body {
+    margin: 0;
+    padding: 0;
+    font-size: 1rem;
   }
 
 
   nav {
-    margin:0;
+    margin: 0;
+    padding: 0;
+    width: 100%;
     position: static;
-    float: left;
-    margin-left:5rem;
-    width: 90%;
-    //min-width: 490px;
     
   }
 
   main {
-    float: left;
-    //min-width: 490px;
-    width: 90%;
-    margin-left: 5rem;
+    margin: 0;
+    padding: 0;
+    width: 100%;
+    position: static;
     #content {
+      max-width: 100%;
       width: 100%;
-      margin-right: 1rem;
+      margin: 0;
+      padding: 0;
     }
   }
 
   footer {
-    width: 90%;
-    margin-lefT:5rem;
+    margin: 0;
+    padding: 0;
+    width: 100%;
     margin-top: 3rem;
     position: static;
   }
