--- a/themes/docsacode/templates/search.html
+++ b/themes/docsacode/templates/search.html
@@ -2,7 +2,8 @@
 
 {% block nav %}
     <ul id="breadcrumbs">
-        <li><a href="/">{{ config.title }}</a>&nbsp;&#8594;&nbsp;</li>
+        {% set s = get_section(path="_index.md") %}
+        <li><a href="/">{{ s.title }}</a>&nbsp;&#8594;&nbsp;</li>
         <li><h4>{{ page.title }}</h4></li>
     </ul>
 {% endblock nav %}
