small fixes in exhibition guide, theme margins changed

--- a/themes/docsacode/sass/main.scss
+++ b/themes/docsacode/sass/main.scss
@@ -99,6 +99,7 @@ pre {
 h2, h3 {
   font-weight: 400;
   margin-top: 2rem;
+  margin-bottom: 0.5rem;
 }
 
 h1 {
@@ -214,7 +215,7 @@ main {
     padding-left: 1rem;
     list-style-position: outside;
     margin-bottom: 0.5rem;
-    margin-top: 0.2rem;
+    margin-top: 0.1rem;
   }
 
   img {
