--- a/themes/docsacode/templates/index.html
+++ b/themes/docsacode/templates/index.html
@@ -30,7 +30,9 @@
               "
             />
           <div id="submenu">
-            <a href="/infoportal">Über uns</a> | <a href="/infoportal/impressum">Impressum</a> | 
+            <a href="/infoportal">Über uns</a> | 
+            <a href="/infoportal/ebook">Ebook (beta)</a> | 
+            <a href="/infoportal/impressum">Impressum</a> | 
             <a href="/infoportal/search">Suche</a>    
           </div>
         {% block nav %}
