fixed ebook link in menu

--- a/themes/docsacode/templates/index.html
+++ b/themes/docsacode/templates/index.html
@@ -31,7 +31,7 @@
             />
           <div id="submenu">
             <a href="/infoportal">Über uns</a> | 
-            <a href="/infoportal/ebook">Ebook (beta)</a> | 
+            <a href="/infoportal/ebook">E-book (beta)</a> | 
             <a href="/infoportal/impressum">Impressum</a> | 
             <a href="/infoportal/search">Suche</a>    
           </div>
