added glossar template

--- a/themes/docsacode/sass/main.scss
+++ b/themes/docsacode/sass/main.scss
@@ -53,7 +53,7 @@ a:visited {
   color:royalblue;
 }
 
-h1, h2, h3, h4, h5 {
+h1, h2, h3, h4, h5, h6 {
   .zola-anchor {
     visibility: hidden;
     text-decoration: none;
@@ -100,6 +100,11 @@ h2, h3 {
   font-weight: 400;
   margin-top: 2rem;
   margin-bottom: 0.5rem;
+}
+
+h5, h6 {
+  font-weight: 600;
+  font-size: 0.9rem;
 }
 
 h1 {
