--- a/themes/docsacode/sass/main.scss
+++ b/themes/docsacode/sass/main.scss
@@ -85,6 +85,8 @@ th {
 
 th, td {
   padding: 0.3rem 1rem  0.3rem 1rem;
+  font-size: 0.88rem;
+  vertical-align: top;
 }
 
 pre {
@@ -239,7 +241,26 @@ footer {
   left: 4rem;
 }
 
+.blog-paginator {
+  margin-top: 1rem;
+  margin-bottom: 4rem;
+}
 
+.blog-index-title {
+  margin-top: 0.5rem;
+  margin-bottom: 1rem;
+}
+
+.blog-index-summary {
+  margin-top: 0.5rem;
+  margin-bottom: 3rem;
+}
+
+.blog-post-nav {
+  margin-left: 1rem;
+  font-size: 0.88rem;
+  margin-bottom: 3rem;
+}
 
 @media only screen and (max-width: 1090px) {
   html {
