--- a/themes/docsacode/sass/main.scss
+++ b/themes/docsacode/sass/main.scss
@@ -56,7 +56,7 @@ a:hover {
 }
 
 h1, h2, h3, h4, h5, h6 {
-  .zola-anchor {
+  .anchor {
     visibility: hidden;
     text-decoration: none;
     border-bottom-color: transparent;
@@ -66,7 +66,7 @@ h1, h2, h3, h4, h5, h6 {
   }
 
   &:hover {
-    .zola-anchor {
+    .anchor {
       visibility: visible;
     }
   }
