--- a/themes/docsacode/templates/index.html
+++ b/themes/docsacode/templates/index.html
@@ -32,6 +32,7 @@
           <div id="submenu">
             <a href="/infoportal">Über uns</a> | 
             <a href="/infoportal/blog">Blog</a> | 
+            <a href="/infoportal/newsletter">Newsletter</a> |
             <a href="/infoportal/ebook">E-book (beta)</a> | 
             <a href="/infoportal/impressum">Impressum</a> | 
             <a href="/infoportal/search">Suche</a>    
