added blogpost; funding link to menu

--- a/themes/docsacode/templates/index.html
+++ b/themes/docsacode/templates/index.html
@@ -33,7 +33,8 @@
             <a href="/infoportal">Über uns</a> | 
             <a href="/infoportal/blog">Blog</a> | 
             <a href="/infoportal/newsletter">Newsletter</a> |
-            <a href="/infoportal/ebook">E-book (beta)</a> | 
+            <a href="/infoportal/ebook">E-book</a> | 
+            <a href="https://kompetenzwerkd.github.io/funding">Ausschreibungen</a> | 
             <a href="/infoportal/impressum">Impressum</a> | 
             <a href="/infoportal/search">Suche</a>    
           </div>
