better table layout

--- a/themes/docsacode/sass/main.scss
+++ b/themes/docsacode/sass/main.scss
@@ -93,7 +93,7 @@ th {
 th, td {
   padding: 0.3rem 1rem  0.3rem 1rem;
   font-size: 0.88rem;
-  vertical-align: top;
+  vertical-align: middle;
   text-align: left;
 }
 
